# Cambodian-Companies-Scraper

./: .gitignore  README.md
cambodian_scraper/: count_test.csv  docker-compose.yml  id.csv  pyproject.toml  scraped_ids.csv  scrapy.cfg
cambodian_scraper/cambodian_scraper/: items.py  middlewares.py  mongo.py  pipelines.py  settings.py
cambodian_scraper/cambodian_scraper/spiders/: cambodian_spider.py  id_cambodian_spider.py  new_cambodian_spider.py
