[tool.poetry]
name = "cambodian-scraper"
version = "0.1.0"
description = ""
authors = ["Joshua Westphal da Silva <joshuasilva333@gmail.com>"]
readme = "README.md"
packages = [{include = "cambodian_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.8.0"
scrapy-playwright = "^0.0.26"
scrapy-fake-useragent = "^1.4.4"
scrapy-rotating-proxies = "^0.6.2"
itemloaders = "^1.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
